Finished the implementation of the final report of robotics

--- a/report/robotics-final-report.tex
+++ b/report/robotics-final-report.tex
@@ -442,13 +442,13 @@ Para concluir con la práctica de Localización, se puede decir que se ha conseg
 
 Esta práctica me ha resultado personalmente la más interesante de las tres prácticas realizadas, ya que el hecho de poder ver como dependiendo de los valores que se le introduzcan a los distintos parámetros de la localización, se tenga que el robot sea más preciso o menos, me resulta muy interesante, porque para mi, la localización es una de las partes más importantes de la robótica, ya que si no se tiene una buena localización, el robot no podrá realizar las tareas que se le encomienden de manera correcta.
 
-\chapter{Filtro de partículas}
+\chapter{Particulate filter}
 
-\section{¿Qué es un filtro de partículas?}
+\section{What is a particulate filter?}
 
-El filtro de partículas es un método de estimación de estado que utiliza una aproximación basada en muestras para representar la distribución de probabilidad de un estado. El filtro de partículas es un método no paramétrico, lo que significa que no hace suposiciones sobre la forma de la distribución de probabilidad. En cambio, el filtro de partículas representa la distribución de probabilidad mediante una colección de muestras, llamadas partículas, que se distribuyen de acuerdo con la distribución de probabilidad. 
+The particle filter is a state estimation method that uses a sample-based approximation to represent the probability distribution of a state. The particle filter is a non-parametric method, which means that it makes no assumptions about the shape of the probability distribution. Instead, the particle filter represents the probability distribution by a collection of samples, called particles, which are distributed according to the probability distribution. 
 
-La idea fundamental se basa en representar la función de distribución posterior buscada con un conjunto de muestras aleatorias con pesos asociados y calcular estimados basados en estas muestras y pesos.
+The fundamental idea is based on representing the sought posterior distribution function with a set of random samples with associated weights and calculating estimates based on these samples and weights.
 
 \begin{thebibliography}{99}
   \bibitem{1} UdeSantigoVirtual. [2023]. Herramientas matemáticas. Universidad de Santiago de Chile. Recuperado de \url{http://www.udesantiagovirtual.cl/moodle2/mod/book/view.php?id=24916}
